#50 - Improve deployment files

--- a/deployment/.example.env.j2
+++ b/deployment/.example.env.j2
@@ -1,6 +1,6 @@
 
 APP_NAME="Recipe Finder"
-APP_ENV=production
+APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
@@ -31,9 +31,6 @@ DB_PASSWORD=root
 
 WWWGROUP=1000
 WWWUSER=1000
-
-# Change this to 'bigquery' if you want to use BigQuery
-DATABASE_CONNECTION='mongodb'
 
 MONGODB_USERNAME=admin
 MONGODB_PASSWORD=password
