--- a/deployment/docker/templates/docker-compose.prod.yml.j2
+++ b/deployment/docker/templates/docker-compose.prod.yml.j2
@@ -61,16 +61,17 @@ services:
 
   mongodb:
     image: mongo:6.0
-    container_name: mongodb_live
+    container_name: mongodb
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: geheim
-      MONGO_INITDB_DATABASE: 'recipes_and_ingredients'
+      MONGO_INITDB_ROOT_PASSWORD: password
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    networks:
+      - sail
     deploy:
       resources:
         limits:
