--- a/deployment/docker/templates/nginx-default.conf.j2
+++ b/deployment/docker/templates/nginx-default.conf.j2
@@ -21,9 +21,18 @@ server {
     index index.php;
     charset utf-8;
 
+    # Security Headers
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
+
+    # Vite Build Assets
+    location /build {
+        access_log off;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri $uri/ =404;
+    }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -48,7 +57,7 @@ server {
         deny all;
     }
 
-    client_max_body_size {{ client_max_body_size | default('64M') }};
+    client_max_body_size 64M;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
